--- a/debian/rules
+++ b/debian/rules
@@ -60,7 +60,7 @@ ifeq ($(DEB_HOST_ARCH_OS),linux)
 	ALL_MODPKG_LIST += PROTO_SCTP
 endif
 
-BUILD_MODPKG_LIST := MYSQL PROTO_TLS TLS_MGM
+BUILD_MODPKG_LIST := MYSQL PROTO_TLS TLS_MGM B2BUA
 
 MAJOR_RELEASE=$(shell lsb_release -rs | cut -d "." -f 1)
 
